# Rust_Vehicular_API

./: Cargo.toml
src/: main.rs  vehicles.rs
tests/: quick_dev.rs
