[package]
name = "Rust_Vehicular_API"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"